Started the middle section, trying to fix the spacing still

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,10 @@ h3 {
     line-height: 24px;
 }
 
+.flex-sm {
+    display: flex;
+}
+
 /*
 =========================================================
 Header
@@ -56,17 +60,17 @@ Header
     border-bottom: 1px solid #f4f5f6;
 }
 
-.news-navbar> li> a {
+.news-navbar>li>a {
     color: black;
 }
 
-.news-navbar> li> a:hover {
+.news-navbar>li>a:hover {
     text-decoration: none;
     color: #f72210;
 }
 
 @media screen and (min-width: 992px) {
-.page-header .header-middle {
+    .page-header .header-middle {
         background-color: var(--newsred);
         padding: 10px 15px 10px 15px;
         position: absolute;
@@ -94,7 +98,7 @@ Header
         display: none;
     }
 
-    .header-middle .logo> img {
+    .header-middle .logo>img {
         fill: white;
         width: 132px;
         height: 20px;
@@ -131,9 +135,8 @@ Main
     width: 71%;
 }
 
-.col11 {
-    width: 41%;
-    padding: 0 15px 0 15px;
+.column-4-wrap {
+    display: flex;
 }
 
 .block-title {
@@ -146,13 +149,18 @@ Main
     position: relative;
 }
 
+.col-wrap {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .category {
     position: absolute;
     bottom: 0;
     left: 0;
     z-index: 1;
     background-color: rgba(24, 26, 27, 0.9);
-    font: bold 17px/16px "Roboto Condensed",sans-serif;
+    font: bold 17px/16px "Roboto Condensed", sans-serif;
     padding: 8px 15px 9px;
 }
 
@@ -164,11 +172,38 @@ Main
     text-decoration: none;
 }
 
-h3> a {
+h3>a {
     color: black;
 }
 
-h3> a:hover {
+h3>a:hover {
     color: black;
     text-decoration: underline #f72210;
+}
+
+.culture-stories {
+    padding: 10px 0;
+}
+
+.culture-item {
+    flex: 1;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 33%;
+}
+
+.tags {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    background-color: rgba(24, 26, 27, 0.9);
+    font: bold 17px/16px "Roboto Condensed", sans-serif;
+    padding: 8px 15px 9px;
+}
+
+.culture-item .image {
+    position: relative;
+    width: 155px;
+    object-fit: cover;
 }
